Limit to max 250 items per page (realistic limit)

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -242,7 +242,7 @@
                                         <option value="40">40 / $T('Glitter-page')</option>
                                         <option value="50">50 / $T('Glitter-page')</option>
                                         <option value="100">100 / $T('Glitter-page')</option>
-                                        <option value="9999999">$T('Glitter-everything')</option>
+                                        <option value="250">250 / $T('Glitter-page')</option>
                                     </select>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                         <option value="40">40 / $T('Glitter-page')</option>
                                         <option value="50">50 / $T('Glitter-page')</option>
                                         <option value="100">100 / $T('Glitter-page')</option>
-                                        <option value="9999999">$T('Glitter-everything')</option>
+                                        <option value="250">250 / $T('Glitter-page')</option>
                                     </select>
                                 </div>
                             </div>
