Orphan add/remove notification differs

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -32,6 +32,10 @@
         <span class="glyphicon glyphicon-trash"></span> $T('Glitter-notification-removing1')
     </div>
 
+    <div class="main-notification-box-sendback">
+        <span class="glyphicon glyphicon-plus"></span> $T('Glitter-backToQueue')
+    </div>
+
     <div class="main-notification-box-removing-multiple">
         <span class="glyphicon glyphicon-trash"></span> $T('Glitter-notification-removing') (<span class="main-notification-box-file-count"></span>)
     </div>
