--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -55,6 +55,12 @@ legend,
     background-color: #DADADA;
 }
 
+.main-notification-box {
+    background-color: #727272;
+    border-color: #252525 !important;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+
 .container,
 .modal-body,
 .modal-footer {
@@ -74,6 +80,15 @@ legend,
 .max-speed-input-clear:hover,
 .nav-tabs>li>a:hover {
     color: black;
+}
+
+.nav-tabs>li.active>a, 
+.nav-tabs>li.active>a:focus, 
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li>a:hover {
+    background-color: #ddd;
+    color: #555;
+    box-shadow: 0px -1px 1px 1px rgba(0,0,0,0.15);
 }
 
 .processing-download > div {
@@ -168,12 +183,6 @@ legend, hr {
 
 #modal-item-files .item-files-table td {
     border-bottom: none !important;
-}
-
-.queue-item .dropdown-menu:before, 
-.history-item .dropdown-menu:before, 
-.info-container-box-sorting .dropdown-menu:before {
-    
 }
 
 .queue-item .dropdown-menu:after, 
