Add Glitter option for Compact Layout
There is still some work to be done, but this is the first version!

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -351,6 +351,14 @@
                             </div>
                             <div class="form-group form-checkbox">
                                 <label class="col-sm-6 control-label">
+                                    $T("Glitter-displayCompact")
+                                </label>
+                                <div class="col-sm-4">
+                                    <input type="checkbox" name="displayCompact" value="true" data-bind="checked: displayCompact" />
+                                </div>
+                            </div>
+                            <div class="form-group form-checkbox">
+                                <label class="col-sm-6 control-label">
                                     $T("Glitter-confirmDeleteQueue")
                                 </label>
                                 <div class="col-sm-4">
