--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -144,6 +144,6 @@
             <!--#include $webdir + "/include_history.tmpl"#-->
         </div>
         
-        <!--#include $webdir + "/include_modals.tmpl"#-->
+        <!--#include $webdir + "/include_overlays.tmpl"#-->
     </body>
 </html>
