Add pyOpenSSL info to startup/utility/config base. Add OpenSSL & yEnc to config base as well.

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -266,6 +266,9 @@ textarea:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[ty
 .padTable h3 {
     margin-top: 0;
 }
+tr.separator {
+    height: 30px;
+}
 .catTable th, .catTable td {
     padding: 5px;
 }
