--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -55,7 +55,7 @@
                     </div>
                     <div class="field-pair">
                         <label class="config">$T('sort-legenda')</label>
-                        <input type="button" value="$T('sort-legenda')" onclick="jQuery(this).hide(); jQuery('#Key1').show();" />
+                        <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key1').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key1" class="Key">
                             <thead>
                                 <tr>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="field-pair">
                         <label class="config">$T('sort-legenda')</label>
-                        <input type="button" value="$T('sort-legenda')" onclick="jQuery(this).hide(); jQuery('#Key2').show();" />
+                        <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key2').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key2" class="Key">
                             <thead>
                                 <tr>
@@ -349,7 +349,7 @@
                     </div>
                     <div class="field-pair">
                         <label class="config">$T('sort-legenda')</label>
-                        <input type="button" value="$T('sort-legenda')" onclick="jQuery(this).hide(); jQuery('#Key3').show();" />
+                        <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key3').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key3" class="Key">
                             <thead>
                                 <tr>
