--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -111,6 +111,7 @@ label.wide,
 }
 .field-pair h5 {
     margin-bottom: 5px;
+    line-height: normal;
 }
 .desc {
     display: block;
@@ -225,6 +226,7 @@ textarea:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[ty
 .disabled,
 .disabled input,
 .disabled .clearBtn,
+.disabled .patternKey,
 .disabled .show_qrcode,
 .disabled .generate_key {
     color: #aaa !important;
@@ -405,8 +407,9 @@ tr.separator {
     -webkit-transform: scale(1) !important;
     opacity: 1 !important;
 }
-.fileBrowser {
-    margin-left: -1px!important;
+.btn-default.fileBrowser {
+    margin-left: -1px !important;
+    box-shadow: 1px 0px 1px rgba(0,0,0,.1) !important;
 }
 #filebrowser_modal .list-group-item {
     font-weight: bold;
@@ -1086,4 +1089,3 @@ input[type="checkbox"] {
         padding-right: 5px;
     }
 }
-
