--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -293,6 +293,20 @@ tr.separator {
 .RSS form[action="add_rss_feed"] tr:nth-child(even) {
     border: 1px solid #E5E5E5;
 }
+.Config .table {
+    margin: 0;
+    border-bottom: 1px solid #ddd
+}
+.Config .colmask {
+    margin-bottom: 12px;
+}
+.Config th {
+    width: 20%;
+    min-width: 150px;
+}
+.Config .label {
+    font-size: 90%;
+}
 .tab-pane thead tr {
     background-color: transparent !important;
 }
