--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -8,7 +8,7 @@
 <!--#from sabnzbd.newsunpack import PAR2_COMMAND, PAR2C_COMMAND, RAR_COMMAND, ZIP_COMMAND, SEVEN_COMMAND, NICE_COMMAND, IONICE_COMMAND#-->
 
     <div class="colmask">
-        <div class="table-responsive section padTable">
+        <div class="section padTable">
             <table class="table table-striped">
                 <tbody>
                     <tr>
@@ -43,6 +43,7 @@
                                 $sabnzbd.utils.sslinfo.ssl_version() <em>[$sslversions]</em>
                             <!--#else#-->
                                 <span class="label label-warning">$T('notAvailable')</span>
+                                <a href="$helpuri$help_uri#no_ssl" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                             <!--#end if#-->
                         </td>
                     </tr>
@@ -53,6 +54,7 @@
                                 $sabnzbd.utils.sslinfo.pyopenssl_version()
                             <!--#else#-->
                                 <span class="label label-warning">$T('notAvailable')</span>
+                                <a href="$helpuri$help_uri#no_ssl" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                             <!--#end if#-->
                         </td>
                     </tr>
@@ -63,6 +65,7 @@
                                 <span class="glyphicon glyphicon-ok"></span>
                             <!--#else#-->
                                 <span class="label label-warning">$T('notAvailable')</span>
+                                <a href="$helpuri$help_uri#no_yenc" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                             <!--#end if#-->
                         </td>
                     </tr>
@@ -71,7 +74,7 @@
         </div>
     </div>
     <div class="colmask">
-        <div class="table-responsive section padTable">
+        <div class="section padTable">
             <table class="table table-striped">
                 <tbody>
                     <tr>
