--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -295,17 +295,25 @@ tr.separator {
 }
 .Config .table {
     margin: 0;
-    border-bottom: 1px solid #ddd
+    border: 1px solid #ddd
 }
 .Config .colmask {
     margin-bottom: 12px;
 }
+.Config .padding {
+    padding: 13px;
+}
 .Config th {
     width: 20%;
     min-width: 150px;
+    padding-left: 15px !important;
 }
 .Config .label {
     font-size: 90%;
+}
+.Config td .glyphicon-question-sign  {
+    color: black !important;
+    top: 3px;
 }
 .tab-pane thead tr {
     background-color: transparent !important;
