--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -186,20 +186,16 @@
                                     <div class="col-sm-6">$T('swtag-server')</div>
                                     <div class="col-sm-6">
                                         <span data-bind="text: servername"></span>
+                                        <span class="label label-default" data-bind="visible: serverstatus">$T('optional').capitalize()</span>
                                     </div>
                                 </div>
                                 <div class="row" data-bind="visible: serverblocked()">
                                     <div class="col-sm-12">
-
                                         <div class="alert alert-danger">
                                         <a href="#" data-bind="visible: serverblocked(), click: function() { \$parent.unblockServer(servername()) }" class="btn btn-default"><span class="glyphicon glyphicon-share-alt"></span> $T('Glitter-unblockServer')</a>
                                         <span data-bind="text: serverblocked()"></span>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-6">$T('status')</div>
-                                    <div class="col-sm-6" data-bind="text: serverstatus"></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-6">$T('priority')</div>
